--- a/views/layout.erb
+++ b/views/layout.erb
@@ -28,7 +28,7 @@
     </div>
     </header>    
 
-    <div class="container">
+    <div class="container" id="news-labs-tabs">
       <div id="tab-wrapper" class="outer solid">
         <div id="index-tabs" class="tabs">
           <ul>
