--- a/public/stylesheets/media-queries-temp.css
+++ b/public/stylesheets/media-queries-temp.css
@@ -9,7 +9,8 @@
         overflow: auto;
     }
     div#news-lab-events article.intro header h1 {
-        width: 45%;
+        width: 200px;
+        margin-top: 129px;
     }
     div#news-lab-events article.intro figure {
 	    width: 272px;
@@ -25,8 +26,21 @@
     }
 
 }
-/* Tablets portrait */
+/* iPad portrait (768px) and Nexus 7 landscape (720px) */
 @media screen and (min-width: 720px) and (max-width: 1023px){
+    div#news-lab-events article.intro header h1 {
+        width: 353px;
+        margin-top: 220px;
+    }
+    div#news-lab-events article.intro figure {
+	    width: 454px;
+	    height: 258px;
+	}
+	div#news-lab-events article.intro p {
+        position: absolute;
+        top: -5px;
+        left: 464px;
+    }
     div#news-lab-events section.timeline figure.tiny-timeline{
       display: none;
     }
@@ -34,14 +48,15 @@
       background-color: white;
     }	
 }
-/* Tablets landscape and beyond */
+/* iPad landscape (1024px) and beyond */
 @media screen and (min-width: 1024px) {
 	div#news-lab-events {
-	    margin: 0 auto;
+	    margin: 6px auto;
 	    width: 1024px;
 	}
-	#tab-wrapper {
+	#news-labs-tabs {
 	    margin: 0 auto;
+	    width: 1024px;
 	}
 	div#news-lab-events article.intro {
 	    width: 736px;
