--- a/views/event.erb
+++ b/views/event.erb
@@ -27,19 +27,8 @@
       <%= erb :'modules/_people' %>
       <%= erb :'modules/_places' %>
       </div>
-
-      <section class="timeline">
-          <header class="section">
-            <h2>Timeline</h2>
-          </header>
-          <div class="content">
-              <h3>March 2011: Syrian Protests</h3>
-              <figure class="tiny-timeline">
-                  <img src="/images/event/timeline-mockup.jpg" alt="" />
-              </figure>
-              <a href="#" class="cta">View detailed timeline</a>
-          </div>          
-      </section>     
+      
+      <%= erb :'modules/_timeline' %>
 
     </div>
 
