--- a/views/modules/_timeline.erb
+++ b/views/modules/_timeline.erb
@@ -2,11 +2,14 @@
       <header class="section">
         <h2>Timeline</h2>
       </header>
-      <div class="content">
+      <div class="content">          
+          <div class="timeline-mockup"></div>
+          <!--
           <h3>March 2011: Syrian Protests</h3>
           <figure class="tiny-timeline">
               <img src="/images/event/timeline-mockup.jpg" alt="" />
           </figure>
           <a href="#" class="cta">View detailed timeline</a>
+          -->
       </div>          
     </section> 
