started adding cacheable mixin

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,7 +23,7 @@
     </div>
     <div id="events-header">
       <h1>
-        <a href="http://www.bbc.co.uk/news">News</a>
+        <a href="http://www.bbc.co.uk/news"><%= @domain_display_name %></a>
       </h1>
     </div>
     </header>    
