--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,7 +13,8 @@
     <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
   </head>
 
-  <body>
+
+  <body class="<%= @domain[:body_class] %>">
 
     <header class="banner" role="banner">
     <div id="global-header">
@@ -27,7 +28,8 @@
       </h1>
     </div>
     </header>    
-
+    
+    <% if @domain[:id] == "news" %>
     <div class="container" id="news-labs-tabs">
       <div id="tab-wrapper" class="outer solid">
         <div id="index-tabs" class="tabs">
@@ -45,6 +47,7 @@
         </div>
       </div>
     </div>    
+    <% end %>
 
     <%= yield %>
 
