--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -41,23 +41,17 @@ figcaption {
 }
 
 /* Page header */
-header.banner{
-  background-color: #cd0102;
-}
 #global-header {
   padding: 0.5em;
-  background-color: #520000;
 }
 #global-header img {
   display: block;
 }
 #events-header {
-  color: #fff;
   font-family: "Gill Sans", sans-serif;
   text-transform: uppercase;
 }
 #events-header a {
-  color: #fff;
   font-size: 4em;
 }
 #events-header .location {
@@ -83,7 +77,6 @@ header.banner{
   float: left;
   margin:2px 2px 0px 0px;
   padding:10px;
-  background-color: lightgrey;
 }
 .tabs li a {
   color:black;
@@ -94,16 +87,9 @@ header.banner{
   -webkit-font-smoothing: antialiased;
   padding-top: 0.4rem;
 }
-.tabs li.open{
-  background-color:white;   
-}
-.solid{
-  background-color: darkgrey;
-}
 #tab-wrapper{
   padding-top: 20px;
 }
-
 /* Page layout */
 .container {
   overflow: hidden;
@@ -173,11 +159,7 @@ div#news-lab-events article.intro {
   border-top: 1px solid #fff;
 }
 div#news-lab-events article.intro header h1{
-  color: #000000;
-  background: #ffffff;
-  margin-top: 141px;
   width: 276px;
-  min-height: 4.5rem;
 }
 div#news-lab-events article.intro figure {
   position: absolute;
@@ -406,7 +388,6 @@ footer {
 #footer-content p {
   margin: 0;
 }
-
 /* GMap */
 div#news-lab-events section.places #map h3 strong {
     font-weight: 800;
@@ -420,7 +401,6 @@ div#news-lab-events section.places #map ul li a{
 div#news-lab-events section.places #map ul li a:hover{
    text-decoration:underline;     
 }
-
 /* For events index page */
 .index-events{
   background-color:lightgrey;
@@ -428,7 +408,6 @@ div#news-lab-events section.places #map ul li a:hover{
   padding: 20px;
   margin: 5px;
 }
-
 .index-events li{
   background-color:lightgrey;
   margin: 5px; 
@@ -438,4 +417,157 @@ div#news-lab-events section.places #map ul li a:hover{
 .index-events li a{
   padding:5px;
   text-decoration:underline;
+}
+@media screen and (orientation:landscape) {
+  html {
+    -webkit-text-size-adjust: none;
+  }
+}
+
+/* Smart phones landscape */
+@media screen and (min-width: 480px) and (max-width: 719px) {
+    div#news-lab-events article.intro {
+        overflow: auto;
+    }
+    div#news-lab-events article.intro header h1 {
+        width: 200px;
+        margin-top: 129px;
+    }
+    div#news-lab-events article.intro figure {
+	    width: 272px;
+	    height: 151px;
+	}
+    div#news-lab-events article.intro p {
+        position: absolute;
+        top: -5px;
+        left: 284px;
+    }    	
+    div#news-lab-events section.timeline figure.wide-timeline{
+      display: none;
+    }
+    div#news-lab-events section.timeline div.timeline-mockup {
+	    height: 316px;
+	    background: #ffffff url('../images/event/timeline-mockup-480-view.jpg') no-repeat center 15px; 
+    }
+}
+/* iPad portrait (768px) and Nexus 7 landscape (720px) */
+@media screen and (min-width: 720px) and (max-width: 1023px){
+    div#news-lab-events article.intro header h1 {
+        width: 353px;
+        margin-top: 220px;
+    }
+    div#news-lab-events article.intro figure {
+	    width: 454px;
+	    height: 258px;
+	}
+	div#news-lab-events article.intro p {
+        position: absolute;
+        top: -5px;
+        left: 464px;
+    }
+    div#news-lab-events section.timeline figure.tiny-timeline{
+      display: none;
+    }
+    div#news-lab-events section.timeline .content{
+      background-color: white;
+    }
+    div#news-lab-events section.timeline div.timeline-mockup {
+	    height: 316px;
+	    background: #ffffff url('../images/event/timeline-mockup-480-view.jpg') no-repeat center 15px; 
+    }	
+}
+/* iPad landscape (1024px) and beyond */
+@media screen and (min-width: 1024px) {
+	div#news-lab-events {
+	    margin: 6px auto;
+	    width: 1024px;
+	}
+	#news-labs-tabs {
+	    margin: 0 auto;
+	    width: 1024px;
+	}
+	div#news-lab-events article.intro {
+	    width: 736px;
+	    float: left;   
+	}
+	div#news-lab-events article.intro figure {
+	    width: 736px;
+	    height: 414px;
+	}
+	div#news-lab-events section header h2 {	
+        background: #dcdcdc;
+    }
+    div#news-lab-events article.intro header h1 {
+	    margin-top: 373px;
+	}
+	div#news-lab-events section.articles {
+	    width: 256px;
+	    float: left;
+	    margin-left: 10px;
+	}
+    div#news-lab-events div.secondary-modules {        
+        clear: both;
+    }
+    div#news-lab-events section.articles ol li a {
+        background-color: #ffffff;
+    }
+    div#news-lab-events section.people {
+        width: 496px;
+        float: left;
+    }
+    div#news-lab-events section.people ul li {
+        background-color: #DCDCDC;
+    }
+    div#news-lab-events section.people ul article div.figure {
+	  width: 176px;
+	}
+	div#news-lab-events section.people ul article figure {
+	  width: 176px;
+	  height: 100px;	
+	}
+    div#news-lab-events section.people ul section.articles {
+        width: 478px;
+        margin-left: 0;
+    }
+    div#news-lab-events section.people ul li section.articles header h2{
+        background-color: #c0c0c0;
+        color: #ffffff;
+    }
+    div#news-lab-events section.places {
+        width: 480px;
+        float: left;
+        margin-left: 16px;
+    }
+    div#news-lab-events section.timeline {
+        position: relative;
+        top: 15px;
+        clear: both;
+        min-height: 363px;
+    }
+    div#news-lab-events section.timeline header h2{
+        background-color: #ffffff;
+        color: #4f4f4f;
+    }
+    div#news-lab-events section.timeline .content {
+        background-color: #ffffff;
+    }
+    div#news-lab-events section.timeline figure.tiny-timeline {
+        display: none;
+    }
+    div#news-lab-events section.timeline a.cta {
+        width: 17rem;
+        font-weight: 400;
+        position: absolute;
+        top: 5px;
+        right: 26px;         
+    }
+    div#news-lab-events section.people article a.profile {
+	  display: block;    
+	  width: 176px;
+	  margin-top: 0;
+	}
+	div#news-lab-events section.timeline div.timeline-mockup {
+	    height: 961px;
+	    background: #ffffff url('../images/event/timeline-mockup-1024-view.jpg') no-repeat center 15px; 
+    }
 }
