--- a/views/modules/_places.erb
+++ b/views/modules/_places.erb
@@ -1,4 +1,4 @@
-<% if not @page[:event].places.empty? %>
+<% if not @page[:event_places].empty? %>
   <section class="places">
   <header class="section">
   <h2>Places</h2>
@@ -6,7 +6,7 @@
   <div class="content">
     <div id='map' style="width: 100%; height: 300px;">
     <ul>
-      <% @page[:event].places.each do | place | %>
+      <% @page[:event_places].each do | place | %>
 
         <li><a href="<%=place.uri%>"><%= place.name %></a>: <%=place.lat%>,<%=place.long%></li>
 
@@ -17,7 +17,7 @@
     <script type="text/javascript">
       var dummyListElement = '<li><a href="#">Article title</a>: Article description</li>';
       var locations = [
-      <% @page[:event].places.each do | place | %>
+      <% @page[:event_places].each do | place | %>
         ['<h3>Related articles for <strong><%= place.name %></strong></h3><ul>'+dummyListElement + dummyListElement+'</ul>',<%=place.lat%>, <%=place.long%>],
       <% end %>
       ];
