some tweaks for running in live

--- a/views/modules/_people.erb
+++ b/views/modules/_people.erb
@@ -6,6 +6,7 @@
   <div class="content">
     <ul>
       <% @page[:event_people].each do | person | %>
+        <% next if not person.populated? %>
         <li>
         <article>
         <header class="article">
