added temp page for learn events

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -41,7 +41,7 @@
             <a href="#">Most Read</a>
             </li>
             <li class="tab-3 open">
-            <a href="/">Events</a>
+            <a href="/<%= "#{@page[:domain][:id]}" %>/events">Events</a>
             </li>
           </ul>
         </div>
