--- a/views/learn_events.erb
+++ b/views/learn_events.erb
@@ -1,7 +1,7 @@
 <div class="container" id="news-lab-events">
       <nav class="breadcrumb">
           <ol>
-              <li><a href="/">Events</a></li>
+            <a href="/learn/events">Events</a>
           </ol>
       </nav>
 </div>
