--- a/views/learn_events_temp.erb
+++ b/views/learn_events_temp.erb
@@ -7,7 +7,7 @@
       
       <article class="intro">
           <header class="section">
-          <h1>This is an event tile</h1>
+          <h1>This is an event title</h1>
           </header>
           <figure id="main">
             <img src="/images/event/event-placeholder.jpeg" alt="Event placeholder"/>
