adding article pages

--- a/views/learn_places.erb
+++ b/views/learn_places.erb
@@ -1,7 +1,7 @@
 <div class="container" id="news-lab-events">
       <nav class="breadcrumb">
           <ol>
-              <li><a href="/">Places</a></li>
+              <li><a href="/">Place</a></li>
           </ol>
       </nav>
 </div>
