--- a/views/news_articles.erb
+++ b/views/news_articles.erb
@@ -1,7 +1,7 @@
 <div class="container" id="news-lab-events">
       <nav class="breadcrumb">
           <ol>
-              <li><a href="/">Person</a></li>
+              <li><a href="/">Article</a></li>
           </ol>
       </nav>
 </div>
