article placeholder page

--- a/views/learn_people.erb
+++ b/views/learn_people.erb
@@ -1,4 +1,4 @@
-<div class="container" id="news-lab-events">
+<div class="container" id="news-lab-person">
       <nav class="breadcrumb">
           <ol>
               <li><a href="/">Person</a></li>
