--- a/views/modules/_articles.erb
+++ b/views/modules/_articles.erb
@@ -7,7 +7,7 @@
     <ol>
       <% @page[:event_articles].each_with_index do | article,index | %>
         <% break if index == 9 %>
-        <li><a href="<%=article.uri%>"><span><%=article.title%></span></a></li>
+        <li><a href="/news/articles/<%=article.id%>"><span><%=article.title%></span></a></li>
       <% end %>
     </ol>
   </div>          
