--- a/views/news_events.erb
+++ b/views/news_events.erb
@@ -1,3 +1,22 @@
+
+  <div class="container" id="news-labs-tabs">
+    <div id="tab-wrapper" class="outer solid">
+      <div id="index-tabs" class="tabs">
+        <ul>
+          <li class="tab-1">
+          <a href="#">Top Stories</a>
+          </li>
+          <li class="tab-2">
+          <a href="#">Most Read</a>
+          </li>
+          <li class="tab-3 open">
+          <a href="/<%= "#{@page[:domain][:id]}" %>/events">Events</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
 <div class="container" id="news-lab-events">
   <nav class="breadcrumb">
   <ol>
