--- a/views/news_articles.erb
+++ b/views/news_articles.erb
@@ -1,9 +1,5 @@
 <div class="europe  has-no-ticker ">
 	<div id="header-wrapper">
-		<h2 id="header">
-			<a rel="index" href="http://www.bbc.co.uk/news/"><img alt="BBC News" src="/images/articles/news-blocks.gif"></a>
-			<span class="section-title">Europe</span>
-		</h2>
 		
 		<div id="blq-local-nav">
         	<ul id="nav" class="nav">
@@ -216,273 +212,48 @@
 													<h5 class=" hyper-story-header"><a class="story" rel="published-1321736405168" href="http://www.bbc.co.uk/news/world-middle-east-15798218">Guide to the Syrian opposition</a></h5>
 												</li>
 												<li class="column-2 ">
-		
-								
-
-
-
-
-	
-
-
-	
-
-
-
-
-<h5 class=" hyper-story-header">
-	<a class="story" rel="published-1341844253078" href="http://www.bbc.co.uk/news/world-middle-east-18582755">Profile: Syria's Baath Party</a>
-
-		</h5>
-
-								
-																							</li>
-														
-																																													
-															
-																
-																								
-																									
-							<li class="column-2 ">
-		
-								
-
-
-
-
-	
-
-
-	
-
-
-
-
-<h5 class=" hyper-story-header">
-	<a class="story" rel="published-1343055072502" href="http://www.bbc.co.uk/news/world-middle-east-18957096">Profile: Aleppo</a>
-
-		</h5>
-
-								
-																							</li>
-														
-																																													
-															
-																
-																								
-																									
-							<li class="column-2 ">
-		
-								
-
-
-
-
-	
-
-
-	
-
-
-
-
-<h5 class=" hyper-story-header">
-	<a class="story" rel="published-1335541695914" href="http://www.bbc.co.uk/news/world-middle-east-17868325">Profile: Hama</a>
-
-		</h5>
-
-								
-																							</li>
-														
-																																																				
-															
-																
-																								
-																									
-							<li class="column-2 ">
-		
-								
-
-
-
-
-	
-
-
-	
-
-
-
-
-<h5 class=" hyper-story-header">
-	<a class="story" rel="published-1304146216353" href="http://www.bbc.co.uk/news/world-middle-east-13247375">Ruling family dynamics</a>
-
-		</h5>
-
-								
-																							</li>
-														
-																</ul>
-						
-										
-		</div>
-		<script type="text/javascript">$render("hyper-related-assets","group-title-2");</script>
-
-	 
-
-      
-
-
-			
-	<!-- Non specific version -->
-	
-	
-			<div id="group-title-3" class="hyper-related-assets">
-							<h4 class="hyper-depth-stories-header">Around the web</h4>
-				
-					
-					
-												<ul>
-																																																
-																
-																						
-															
-																
-																								
-																									
-							<li class="column-1 ">
-		
-								
-
-
-
-
-	
-
-
-	
-
-
-
-
-<h5 class=" hyper-story-header">
-	<a class="story" href="http://www.bbc.co.uk/arabic/">BBC Arabic website</a>
-
-		</h5>
-
-								
-																							</li>
-														
-																																													
-															
-																
-																								
-																									
-							<li class="column-1 ">
-		
-								
-
-
-
-
-	
-
-
-	
-
-
-
-
-<h5 class=" hyper-story-header">
-	<a class="story" href="https://www.facebook.com/Syrian.Revolution">Revolution 2011 on Facebook</a>
-
-		</h5>
-
-								
-																							</li>
-														
-																																													
-															
-																
-																								
-																									
-							<li class="column-2 ">
-		
-								
-
-
-
-
-	
-
-
-	
-
-
-
-
-<h5 class=" hyper-story-header">
-	<a class="story" href="http://www.sana.sy/index_eng.html">Syrian state news agency Sana</a>
-
-		</h5>
-
-								
-																							</li>
-														
-																																																				
-															
-																
-																								
-																									
-							<li class="column-2 ">
-		
-								
-
-
-
-
-	
-
-
-	
-
-
-
-
-<h5 class=" hyper-story-header">
-	<a class="story" href="http://www.syriahr.com/">Human Rights Observatory (Arabic)</a>
-
-		</h5>
-
-								
-																							</li>
-														
-																</ul>
-						
-										
-		</div>
-		<script type="text/javascript">$render("hyper-related-assets","group-title-3");</script>
-
-	 
-
-  </div>
-
-	       	     </div>
-	
-      
-	
-	<!-- Newstracker -->
-<div class="puffbox">
-	
-
-
-
-
-
-
-
-
-<!-- newstracker puffbox news 19906578 -->
+													<h5 class=" hyper-story-header"><a class="story" rel="published-1341844253078" href="http://www.bbc.co.uk/news/world-middle-east-18582755">Profile: Syria's Baath Party</a></h5>
+												</li>
+												<li class="column-2 ">
+													<h5 class=" hyper-story-header"><a class="story" rel="published-1343055072502" href="http://www.bbc.co.uk/news/world-middle-east-18957096">Profile: Aleppo</a></h5>
+												</li>
+												<li class="column-2 ">
+													<h5 class=" hyper-story-header"><a class="story" rel="published-1335541695914" href="http://www.bbc.co.uk/news/world-middle-east-17868325">Profile: Hama</a></h5>
+												</li>
+												<li class="column-2 ">
+													<h5 class=" hyper-story-header"><a class="story" rel="published-1304146216353" href="http://www.bbc.co.uk/news/world-middle-east-13247375">Ruling family dynamics</a></h5>
+												</li>
+											</ul>
+										</div>
+										<script type="text/javascript">
+											//$render("hyper-related-assets","group-title-2");
+										</script>
+										<!-- Non specific version -->
+										<div id="group-title-3" class="hyper-related-assets">
+											<h4 class="hyper-depth-stories-header">Around the web</h4>
+											<ul>
+												<li class="column-1 ">
+													<h5 class=" hyper-story-header"><a class="story" href="http://www.bbc.co.uk/arabic/">BBC Arabic website</a></h5>
+												</li>
+												<li class="column-1 ">
+													<h5 class=" hyper-story-header"><a class="story" href="https://www.facebook.com/Syrian.Revolution">Revolution 2011 on Facebook</a></h5>
+												</li>
+												<li class="column-2 ">
+													<h5 class=" hyper-story-header"><a class="story" href="http://www.sana.sy/index_eng.html">Syrian state news agency Sana</a></h5>
+												</li>
+												<li class="column-2 ">
+													<h5 class=" hyper-story-header"><a class="story" href="http://www.syriahr.com/">Human Rights Observatory (Arabic)</a></h5>
+												</li>
+											</ul>
+										</div>
+										<script type="text/javascript">
+											//$render("hyper-related-assets","group-title-3");
+										</script>
+										</div>
+									</div>
+									<!-- Newstracker -->
+									<div class="puffbox">
+									<!-- newstracker puffbox news 19906578 -->
 
 
 
